update file reading for MIS