@@ -5,7 +5,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.TestFactory;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.stream.Stream;
 
 public class MispTest {
@@ -13,7 +13,8 @@ public class MispTest {
     @DisplayName("MISP")
     @TestFactory
     public Stream<DynamicTest> testMISP() {
-        var dataSupplier = new MispTestDataSupplier(Paths.get("src", "test", "resources", "MISP").toString());
+        var dataSupplier =
+                new MispTestDataSupplier(Path.of("src", "test", "resources", "MISP"));
         var bench = new ProblemTestBench<>(dataSupplier);
         bench.testRelaxation = true;
         bench.testFLB = true;
